--- a/src/app/my-first-comp/my-first-comp.component.html
+++ b/src/app/my-first-comp/my-first-comp.component.html
@@ -1,4 +1,2 @@
-
-<p>my-first-comp works!</p>
-
-
+<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+<div id="particles-js"></div>
