--- a/src/app/pages/bal-de-projet-pages/update-project/update-project.component.html
+++ b/src/app/pages/bal-de-projet-pages/update-project/update-project.component.html
@@ -1,1 +1,69 @@
-<p>update-project works!</p>
+<div class="bg-dark p-3">
+  <div class="container container-fluid bg-dark text-white ">
+
+    <form [formGroup]="projectForm" class="container w-50 ">
+
+      <div class="form-group p-2">
+        <label for="categoryId">Category:</label>
+        <select class="form-control bg-dark text-white" id="categoryId" formControlName="categoryId">
+          <option *ngFor="let category of categoryList" [value]="category.id">{{ category.name }}</option> </select>
+        <div *ngIf="projectForm.get('categoryId')?.invalid && projectForm.get('categoryId')?.touched" class="alert alert-danger">
+          Please select a category.
+        </div>
+      </div>
+
+      <div class="form-group p-2">
+        <label for="name">Project Name:</label>
+        <input type="text" class="form-control bg-dark text-white" id="name" formControlName="name">
+        <div *ngIf="projectForm.get('name')?.invalid && projectForm.get('name')?.touched" class="alert alert-danger">
+          Please enter a project name.
+        </div>
+      </div>
+
+      <div class="form-group p-2">
+        <label for="groupName">Group Name:</label>
+        <input type="text" class="form-control bg-dark text-white" id="groupName" formControlName="groupName">
+        <div *ngIf="projectForm.get('groupName')?.invalid && projectForm.get('groupName')?.touched" class="alert alert-danger">
+          Please enter a group name.
+        </div>
+      </div>
+
+      <div class="form-group p-2">
+        <label for="classe">Classe:</label>
+        <input type="text" class="form-control bg-dark text-white" id="classe" formControlName="classe">
+      </div>
+
+      <div class="form-group p-2">
+        <label for="scolarYear">Scolar Year:</label>
+        <input type="text" class="form-control bg-dark text-white" id="scolarYear" formControlName="scolarYear">
+      </div>
+      <div class="form-group p-2">
+        <label for="coach">Coach:</label>
+        <input type="text" class="form-control bg-dark text-white" id="coach" formControlName="coach">
+      </div>
+
+
+      <div class="form-group p-2">
+        <label for="date">Date:</label>
+        <input type="date" class="form-control bg-dark text-white" id="date" formControlName="date">
+      </div>
+      <div class="form-group p-2">
+        <label for="imageUrl">Image: </label>
+        <input type="file" class="form-control bg-dark text-white" id="imageUrl" formControlName="imageUrl">
+      </div>
+
+      <div class="form-group p-2">
+        <label for="niveau">Niveau:</label>
+        <select class="form-control bg-dark text-white" id="niveau" formControlName="niveau">
+          <option *ngFor="let option of niveauOptions" [value]="option">{{ option }}</option>
+        </select>
+        <div *ngIf="projectForm.get('niveau')?.invalid && projectForm.get('niveau')?.touched" class="alert alert-danger">
+          Please select a level.
+        </div>
+        <div class=" m-2 w-50">
+          <button type="submit"  class="btn btn-outline-light w-75" (click)="onSubmit()"> save</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
