--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,6 @@
 
   </div>
 <router-outlet ></router-outlet>
-<app-footer class="my-container"></app-footer>
+<!--<app-footer ></app-footer>-->
 
 </body>
