--- a/src/app/pages/bal-de-projet-pages/add-category/add-category.component.html
+++ b/src/app/pages/bal-de-projet-pages/add-category/add-category.component.html
@@ -1,1 +1,72 @@
-<p>add-category works!</p>
+
+
+<body class="bg-dark">
+
+<div class="container"> <!-- open container -->
+  <div class="row"> <!--  open row -->
+
+    <div id="form-header" class="col-12">
+      <h1 id="title">Hotel Survey Form</h1>
+    </div>
+  </div> <!--  close row -->
+
+  <div class="row"> <!--  open row -->
+    <div id="form-tagline " class="col-md-4">
+      <div class="form-tagline">
+        <i class="fa fa-envelope fa-5x"></i>
+        <h2>How Are We Doing?</h2>
+        <p id="description" class="lead">We really value your opinion</p>
+      </div>
+    </div>
+
+    <div id="form-content" class="col-md-8">
+
+      <form id="survey-form" onsubmit="return false;"> <!-- open form -->
+
+        <div class="row form-group">
+          <div class="col-sm-3">
+            <label id="name-label" class="control-label" for="name">*Name:</label>
+          </div>
+
+          <div class="input-group col-sm-9">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon-name"><i class="fa fa-user"></i></span>
+            </div>
+            <input id="name" type="text" class="form-control" placeholder="Please Enter Your Name" name="name" required>
+          </div>
+        </div>
+
+        <hr>
+
+        <div class="form-group row">
+          <div class="col-sm-3">
+            <label class="control-label" for="comment">Comments:</label>
+          </div>
+
+          <div class="input-group col-sm-9">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon-mail"><i class="fa fa-comment"></i></span>
+            </div>
+            <textarea class="form-control" rows="5" id="comment"></textarea>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <div class="col-sm-12 submit-button">
+            <button type="submit" id="submit" class="btn btn-default" aria-pressed="true">Submit Form</button>
+          </div>
+        </div>
+
+      </form> <!-- close form -->
+
+    </div> <!-- close form content div -->
+
+  </div> <!-- close row -->
+</div><!--  close container -->
+
+<footer>
+  <
+</footer>
+
+</body>
+
