--- a/src/app/pages/bal-de-projet-pages/show-all-projects/show-all-projects.component.html
+++ b/src/app/pages/bal-de-projet-pages/show-all-projects/show-all-projects.component.html
@@ -1,33 +1,47 @@
+<div class="bg-dark">
 <section class="wrapper">
   <div class="container">
     <div class="row">
       <div class="col text-center mb-5">
-        <h1 class="display-4 font-weight-bolder">Bootstrap 4 Cards With Background Image</h1>
-        <p class="lead">Lorem ipsum dolor sit amet at enim hac integer volutpat maecenas pulvinar. </p>
+        <h1 class="display-4 font-weight-bolder">Welcome here you can see all the student Projects!</h1>
+        <p class="lead"> this section displays all of our students projects support them we hope to see you here student !  </p>
       </div>
     </div>
-    <div class="row" >
-      <div class="col-sm-12 col-md-6 col-lg-4 mb-4"><div class="card text-dark card-has-bg click-col" style="background-image:url('https://source.unsplash.com/600x900/?tech,street');">
+    <div class="row">
+      <div class="col-sm-12 col-md-6 col-lg-4 mb-4" *ngFor="let project of projects; index as i ">
+        <div class="card text-dark card-has-bg click-col" style="background-image:url('https://source.unsplash.com/600x900/?tech,street');">
         <img class="card-img d-none" src="https://source.unsplash.com/600x900/?tech,street" alt="Creative Manner Design Lorem Ipsum Sit Amet Consectetur dipisi?">
-        <div class="card-img-overlay d-flex flex-column">
+        <div  class="card-img-overlay d-flex flex-column" [routerLink]="['/show-project-details',project.id]">
           <div class="card-body">
-            <small class="card-meta mb-2">Thought Leadership</small>
-            <h4 class="card-title mt-0 "><a class="text-dark" herf="https://creativemanner.com">Web Developmet Lorem Ipsum Sit Amet Consectetur dipisi?</a></h4>
-            <small><i class="far fa-clock"></i> October 15, 2020</small>
+            <small class="card-meta mb-2">{{project.name}}</small>
+            <h4 class="card-title mt-0 "><a class="text-dark" herf="https://creativemanner.com">{{project.groupName}}</a></h4>
+            <small><i class="far fa-clock"></i> {{project.date}}</small>
           </div>
           <div class="card-footer">
             <div class="media">
               <img class="mr-3 rounded-circle" src="https://assets.codepen.io/460692/internal/avatars/users/default.png?format=auto&version=1688931977&width=80&height=80" alt="Generic placeholder image" style="max-width:50px">
               <div class="media-body">
-                <h6 class="my-0 text-dark d-block">Oz Coruhlu</h6>
-                <small>Director of UI/UX</small>
+                <h6 class="my-0 text-dark d-block">{{project.niveau}}</h6>
+                <small>{{project.optionSpeciality?.name}}</small>
               </div>
+              <div class="align-content-lg-end" *ngIf="user.includes('ADMIN')">
+                <button class="btn btn-secondary m-2" [routerLink]="['/update-project',project.id]"> edit </button>
+                <button class="btn btn-danger" (click)="deleteTheProject(i,project.id)"> delete </button>
+
+              </div>
+
             </div>
           </div>
         </div>
-      </div>
-      </div>
+      </div></div>
+
+
+
+
+
+
     </div>
 
   </div>
 </section>
+</div>
