--- a/src/app/pages/bal-de-projet-pages/update-project/update-project.component.html
+++ b/src/app/pages/bal-de-projet-pages/update-project/update-project.component.html
@@ -51,6 +51,10 @@
         <label for="imageUrl">Image: </label>
         <input type="file" class="form-control bg-dark text-white" id="imageUrl" formControlName="imageUrl">
       </div>
+      <div class="form-group p-2">
+        <label for="videoUrl">paste the project presentation url: </label>
+        <input type="text" class="form-control bg-dark text-white" id="videoUrl" formControlName="videoUrl">
+      </div>
 
       <div class="form-group p-2">
         <label for="niveau">Niveau:</label>
