Added Competition page an made Role page Dark

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -12,7 +12,7 @@
       <div class="element-style" routerLink="">
         Feed
       </div>
-      <div class="element-style" routerLink="" style="color: #c88f00">
+      <div class="element-style" routerLink="competitions" style="color: #c88f00">
         Competitions
       </div>
       <div class="element-style" routerLink="">
