--- a/src/app/pages/role/role.component.html
+++ b/src/app/pages/role/role.component.html
@@ -1,3 +1,6 @@
+<div class="modal-fullscreen text-white bg-dark">
+
+
 <h1>liste des utilisateurs</h1>
 <table class="table table-striped">
   <thead class="thead-dark">
@@ -36,3 +39,4 @@
 
 <button (click)="affecterRoleToUser()" class="btn btn-dark" style="color: #343a40;">Affecter</button>
 
+</div>
