--- a/src/app/marketplace/products-back/products-back.component.html
+++ b/src/app/marketplace/products-back/products-back.component.html
@@ -8,6 +8,7 @@
       <thead>
         <tr>
           <th>ID</th>
+          <th>Image</th>
           <th>Name</th>
           <th>Price</th>
           <th>Actions</th>
@@ -16,7 +17,11 @@
       <tbody>
         <tr *ngFor="let product of products">
           <td>{{ product.id }}</td>
+          <td>  
+            <img [src]="assetsImagePath + product.imageUrl" alt="Product Image" [width]="50" [height]="50">
+         </td>
           <td>{{ product.productName }}</td>
+         
           <td>{{ product.productPrice }}</td>
           <td>
             <button class="btn btn-warning" (click)="updateProduct(product.id)">Update</button>
