--- a/src/app/pages/bal-de-projet-pages/add-category/add-category.component.html
+++ b/src/app/pages/bal-de-projet-pages/add-category/add-category.component.html
@@ -11,17 +11,17 @@
   </div> <!--  close row -->
 
   <div class="row"> <!--  open row -->
-    <div id="form-tagline " class="col-md-4">
+    <div id="form-tagline" class="col-md-4 bg-dark-subtle text-black">
       <div class="form-tagline">
-        <i class="fa fa-envelope fa-5x"></i>
-        <h2>How Are We Doing?</h2>
-        <p id="description" class="lead">We really value your opinion</p>
+        <i class="fa fa-cat fa-5x"></i>
+        <h2>Add Category !</h2>
+        <p id="ddd" class="lead">Thank you for your time</p>
       </div>
     </div>
 
-    <div id="form-content" class="col-md-8">
+    <div id="form-content" class="col-md-8 bg-dark-subtle ">
 
-      <form id="survey-form" onsubmit="return false;"> <!-- open form -->
+      <form id="survey-form" onsubmit="return false;" [formGroup]="categoryForm"> <!-- open form -->
 
         <div class="row form-group">
           <div class="col-sm-3">
@@ -30,9 +30,9 @@
 
           <div class="input-group col-sm-9">
             <div class="input-group-prepend">
-              <span class="input-group-text" id="basic-addon-name"><i class="fa fa-user"></i></span>
+              <span class="input-group-text" id="basic-addon-name"><i class="fa fa-edit"></i></span>
             </div>
-            <input id="name" type="text" class="form-control" placeholder="Please Enter Your Name" name="name" required>
+            <input  formControlName="name" id="name" type="text" class="form-control" placeholder="Please Enter Your Name" name="name" required>
           </div>
         </div>
 
@@ -40,20 +40,20 @@
 
         <div class="form-group row">
           <div class="col-sm-3">
-            <label class="control-label" for="comment">Comments:</label>
+            <label class="control-label" for="description"> Category Description:</label>
           </div>
 
           <div class="input-group col-sm-9">
             <div class="input-group-prepend">
               <span class="input-group-text" id="basic-addon-mail"><i class="fa fa-comment"></i></span>
             </div>
-            <textarea class="form-control" rows="5" id="comment"></textarea>
+            <textarea class="form-control" rows="5"  class="form-control" id="description" formControlName="description" required></textarea>
           </div>
         </div>
 
         <div class="form-group row">
           <div class="col-sm-12 submit-button">
-            <button type="submit" id="submit" class="btn btn-default" aria-pressed="true">Submit Form</button>
+            <button type="submit" id="submit" class="btn btn-default" aria-pressed="true" (click)="addCategory()">Submit Form</button>
           </div>
         </div>
 
