--- a/src/app/pages/bal-de-projet-pages/show-project-details/show-project-details.component.html
+++ b/src/app/pages/bal-de-projet-pages/show-project-details/show-project-details.component.html
@@ -7,14 +7,7 @@
   <meta name="author" content="" />
   <title>Creative - Start Bootstrap Theme</title>
   <!-- Favicon-->
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-  <!-- Bootstrap Icons-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-  <!-- Google fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
-  <!-- SimpleLightbox plugin CSS-->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
+
   <!-- Core theme CSS (includes Bootstrap)-->
 </head>
 <body id="page-top">
@@ -46,6 +39,33 @@
   <div class="container px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-lg-8 text-center">
+        <table class="table table-dark">
+          <thead>
+          <tr>
+
+            <th scope="col">group Name</th>
+            <th scope="col">Project Name</th>
+            <th scope="col">Grade </th>
+            <th scope="col">Speciality </th>
+            <th scope="col">Category </th>
+            <th scope="col">Classe </th>
+            <th scope="col">Coach </th>
+            <th scope="col">year </th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <td>{{ project.groupName }}</td>
+            <td>{{ project.name }}</td>
+            <td>{{ project.niveau }}</td>
+            <td>{{project.optionSpeciality?.name}}</td>
+            <td>{{project.category?.name}}</td>
+            <td>{{ project.classe }}</td>
+            <td> {{project.coach }}</td>
+            <td> {{project.scolarYear }}</td>
+          </tr>
+          </tbody>
+        </table>
         <h2 class="text-white mt-0">Here's the application preview!</h2>
         <iframe width="420" height="315"
                 src="https://www.youtube.com/embed/tgbNymZ7vqY">
