--- a/src/app/pages/bal-de-projet-pages/update-project/update-project.component.html
+++ b/src/app/pages/bal-de-projet-pages/update-project/update-project.component.html
@@ -4,10 +4,19 @@
     <form [formGroup]="projectForm" class="container w-50 ">
 
       <div class="form-group p-2">
-        <label for="categoryId">Category:</label>
-        <select class="form-control bg-dark text-white" id="categoryId" formControlName="categoryId">
+        <label for="optionSpeciality">option speciality:</label>
+        <select class="form-control bg-dark text-white" id="optionSpeciality" formControlName="optionSpeciality">
+          <option *ngFor="let optionSpeciality of optionList" [value]="optionSpeciality.id">{{ optionSpeciality.name }} {{optionSpeciality.id}}</option> </select>
+        <div *ngIf="projectForm.get('optionSpeciality')?.invalid && projectForm.get('optionSpeciality')?.touched" class="alert alert-danger">
+          Please select an option speciality.
+        </div>
+      </div>
+
+      <div class="form-group p-2">
+        <label for="category">Category:</label>
+        <select class="form-control bg-dark text-white" id="category" formControlName="category">
           <option *ngFor="let category of categoryList" [value]="category.id">{{ category.name }}</option> </select>
-        <div *ngIf="projectForm.get('categoryId')?.invalid && projectForm.get('categoryId')?.touched" class="alert alert-danger">
+        <div *ngIf="projectForm.get('category')?.invalid && projectForm.get('category')?.touched" class="alert alert-danger">
           Please select a category.
         </div>
       </div>
