--- a/src/app/pages/bal-de-projet-pages/show-contest/show-contest.component.html
+++ b/src/app/pages/bal-de-projet-pages/show-contest/show-contest.component.html
@@ -26,7 +26,7 @@
         </form>
       </div>
 
-      <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="..." /></div>
+      <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="assets/{{contest.image}}" alt="..." /></div>
       <div class="col-md-6">
         <div class="small mb-1">Contest {{contest.name}}</div>
         <h1 class="display-5 fw-bolder">Contest Speciality: {{ contest.option?.name }}</h1>
