--- a/src/app/pages/bal-de-projet-pages/update-contest/update-contest.component.html
+++ b/src/app/pages/bal-de-projet-pages/update-contest/update-contest.component.html
@@ -22,8 +22,8 @@
         <input type="date" class="form-control bg-dark text-white" id="deadline" formControlName="deadline">
       </div>
       <div class="form-group p-2">
-        <label for="imageUrl">Deadline :</label>
-        <input type="file" class="form-control bg-dark text-white" id="imageUrl" formControlName="imageUrl">
+        <label for="imageUrl">image :</label>
+        <input type="file" class="form-control bg-dark text-white" id="imageUrl" formControlName="imageUrl" (change)="onFileSelected($event)">
       </div>
 
       <div class="form-group p-2">
