commit Html changes
Final changes for Events

--- a/src/app/pages/competition-page/competitions-card/competitions-card.component.html
+++ b/src/app/pages/competition-page/competitions-card/competitions-card.component.html
@@ -4,7 +4,7 @@
     {{ var1 }}
   </div>
   <div class="competition-card-description">
-    <span>Yearly Bal de projets</span>
+    <span>{{ var2 }}</span>
     <p>Sunday 3:30 AM GMT+1</p>
   </div>
 </div>
