--- a/src/app/pages/eventpage/events/events.component.css
+++ b/src/app/pages/eventpage/events/events.component.css
@@ -1,66 +1,95 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #1f1f1f; /* Soft black */
-  color: #fff;
-  min-height: 1000vh; /* Set minimum height of the body to 100% of viewport height */
-  display: flex; /* Use flexbox to align content vertically */
-  flex-direction: column; /* Stack child elements vertically */
-  background-image: url('/src/assets/EventBackground.jpeg');
+.competition-section1{
+  width: 100vw;
+  height: 97vh;
 
 }
-
-.container {
-  flex: 1; /* Let the container grow to fill available space */
-  max-width: 650px;
-  margin: 0 auto;
-  padding: 0 20px;
+*{
+  scrollbar-width: none;
 }
-
-.header {
-  background-color: #333;
-  padding: 20px 0;
-}
-
-.header h1 {
-  margin: 0;
-  font-size: 24px;
-}
-
-.main {
-  padding: 20px 0;
-}
-
-.section {
-  margin-bottom: 40px;
-}
-
-.section h2 {
-  font-size: 20px;
-  margin-bottom: 20px;
-}
-
-.footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
+.competition-cards-layout{
   width: 100%;
-  background-color: #333;
-  color: #fff;
-  padding: 20px 0;
-  text-align: center;
+  height:60%;
+  background:linear-gradient(1deg, rgb(27, 30, 35) 70%, rgb(47, 50, 59));
+
 }
 
-.footer p {
-  margin: 0;
+.competition-cards-container{
+  position: relative;
+  z-index: 10;
+  width: 100%;
+  height: 280px;
+  top: -95px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+
+.competition-lists-container{
+  width: 100vw;
+  height: 120vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.competition-lists-layout{
+  width: 60%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.competition-lists{
+  padding-top: 30px;
+  width: 60%;
+  height: 100%;
+  background-color: #282828;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  overflow-y: scroll;
+  scrollbar-width: none;
+}
+
+.competition-container{
+  width: 90%;
+  height: 10%;
+  margin-bottom: 15px;
+  display: flex;
+}
+
+.competition-img{
+  width: 130px;
+  height: 100%;
+}
+.competition-text{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 10px;
+  padding-left: 10px;
+  color: #eff1f6bf;
+}
+
+.competition-text span{
+  font-size: 15px;
+  font-weight: 900;
+}
+.competition-text p{
+  font-weight: 100;
+}
 
 form {
-  background-color: #333;
+  background-color: #282828FF;
   padding: 20px;
   border-radius: 5px;
+  width: 39%;
+  height: 870px;
+  margin-right: -20px;
 }
 
 label {
@@ -76,68 +105,56 @@ input[type="text"] {
   border-radius: 5px;
   display: block; /* Display input as block-level element */
 }
-
-button[type="submit"] {
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-button[type="submit"]:hover {
-  background-color: #0056b3;
-}
-
-.event-container {
-  display: flex; /* Use Flexbox */
-  flex-wrap: wrap; /* Wrap items to the next line */
-}
-
-.event-frame {
-  width: calc(33.33% - 20px); /* Adjust width as needed */
-  margin: 10px; /* Add margin between event frames */
-  background-color: rgba(108, 81, 81, 0.66); /* Background color of event frame */
-  border-radius: 5px; /* Add border radius for rounded corners */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add shadow for depth effect */
-}
-
-.event-details {
-  padding: 10px; /* Add padding for content */
-}
-
-.event-details div {
-  margin-bottom: 5px; /* Add spacing between details */
-}
-
-/* Media query for responsiveness */
-@media (max-width: 768px) {
-  .event-frame {
-    width: calc(50% - 20px); /* Adjust width for smaller screens */
-  }
-}
-
-@media (max-width: 576px) {
-  .event-frame {
-    width: calc(100% - 20px); /* Adjust width for even smaller screens */
-  }
-}
-.event-buttons {
+.events-form-container{
+  margin-top: 20px;
+  width: 100vw;
+  height: 40vh;
   display: flex;
-  justify-content: space-between; /* Space buttons evenly */
+  justify-content: center;
+  align-content: center;
+}
+textarea {
+  width: 100%;
+  height: 150px;
+  border-radius: 10px;
 }
 
-.event-buttons button {
-  padding: 5px 10px;
-  background-color: #332424;
-  color: #fff8f8;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
+
+.competition-card{
+  width: 385px;
+  height: 280px;
+  margin-right: 30px;
+  border-radius: 10px;
+  background: url("https://leetcode.com/_next/static/images/weekly-default-553ede7bcc8e1b4a44c28a9e4a32068c.png");
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
 }
 
-.event-buttons button:hover {
-  background-color: #3c4845;
+.competition-card-timer{
+  width: 100%;
+  height: 25%;
+  background: linear-gradient(0deg, #00000080, #0000);
+  color: white;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding-left: 30px;
+  padding-top: 20px;
 }
-
+.competition-card-description{
+  width: 100%;
+  height: 30%;
+  background: #282828;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: start;
+  padding-left: 20px;
+  padding-top: 20px;
+}
+.competition-card-description span{
+  font-size: 20px;
+  font-weight: 900;
+}
