--- a/src/app/pages/eventpage/events/events.component.html
+++ b/src/app/pages/eventpage/events/events.component.html
@@ -1,44 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Event Management System</title>
-</head>
-<body>
-<header class="header">
-  <div class="container">
-    <h1>Event Management System</h1>
-  </div>
-</header>
+<div class="competition-section1 bg-dark">
+  <div class="competition-cards-layout">
 
-<main class="main">
-  <section id="event-list" class="section">
-    <div class="container">
-      <h2>Events List</h2>
-      <div class="event-container">
-        <div *ngFor="let event of events" class="event-frame">
-          <div class="event-details">
-            <div><strong>Name:</strong> {{ event.name }}</div>
-            <div><strong>Organizer:</strong> {{ event.organizer }}</div>
-            <div><strong>Prize:</strong> {{ event.prize }}</div>
-            <div><strong>Location:</strong> {{ event.location }}</div>
-          </div>
-          <div class="event-buttons">
-            <button *ngIf="helperuser.includes('ADMIN')" (click)="editEvent(addForm.value,event.id)" >Edit</button>
-            <button *ngIf="helperuser.includes('ADMIN')" (click)="deleteEvent(event.id)">Delete</button>
-            <button [routerLink]="['/showevent',event.id]">Show</button>
-          </div>
+  </div>
+  <div class="competition-cards-container">
+    <div *ngFor="let event of events" (click)="showEvent(event.id)" class="event-frame">
+      <div class="competition-card" *ngIf="!oldevent(event)">
+        <div class="competition-card-timer">
+          <svg style="margin-right: 10px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="1em" height="1em" fill="currentColor" class="lc-md:text-lg mr-2 text-base"><path fill-rule="evenodd" d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16zm1-13.4v4.782l3.047 1.524a1 1 0 11-.894 1.788l-3.6-1.8A1 1 0 0111 12V6.6a1 1 0 112 0z" clip-rule="evenodd">20:00</path></svg>
+          {{ event.name }}
+        </div>
+        <div class="competition-card-description">
+          <span>{{ event.location }}</span>
+        </div>
+        <div class="btn-group" role="group" aria-label="Basic example"*ngIf="!oldevent(event)">
+          <button *ngIf="helperuser.includes('ADMIN')" (click)="editEvent(addForm.value,event.id)" class="btn btn-secondary" >Edit</button>
+          <button *ngIf="helperuser.includes('ADMIN')" (click)="deleteEvent(event.id)" class="btn btn-secondary">Delete</button>
+          <button [routerLink]="['/showevent',event.id]" class="btn btn-secondary">Show</button>
         </div>
       </div>
     </div>
-  </section>
-  <section id="create-event" class="section" *ngIf="helperuser.includes('ADMIN')">
-    <div class="container">
-      <h2>Create Event</h2>
-      <form id="createEventForm" [formGroup]="addForm"  (ngSubmit)="onAddEvent()">
+
+  </div>
+</div>
+<div class="competition-lists-container bg-dark">
+  <div class="competition-lists-layout">
+    <div class="competition-lists rounded-5">
+      <div class="competition-container" *ngFor="let eventt of events" >
+
+        <img class="competition-img" src="https://leetcode.com/_next/static/images/weekly-default-553ede7bcc8e1b4a44c28a9e4a32068c.png" alt="" *ngIf="oldevent(eventt)" srcset="">
+        <div class="competition-text" *ngIf="oldevent(eventt)" >
+          <span>{{eventt.name}}</span>
+          <p>{{ eventt.date | date:'yyyy-MM-dd' }}</p>
+        </div>
+      </div>
+      </div>
+
+      <form id="createEventForm"  style="color: whitesmoke;" [formGroup]="addForm"  (ngSubmit)="onAddEvent()">
+        <div *ngIf="helperuser.includes('ADMIN')">
         <label for="eventName">Event Name:</label>
-        <input type="text" id="eventName" ngModel name="name"formControlName="name" required>
+        <input type="text" id="eventName" ngModel name="name"formControlName="name" style="text-" required>
 
         <label for="prize">Prize:</label>
         <input type="text" id="prize" ngModel name="prize" formControlName="prize" required>
@@ -46,7 +46,7 @@
         <label for="organizer">Organizer:</label>
         <input type="text" id="organizer" ngModel name="organizer" formControlName="organizer">
 
-        <label for="location">Location:</label>
+        <label for="location" ><a href="https://www.latlong.net">Location:</a></label>
         <input type="text" id="location" name="location" formControlName="location">
 
         <label for="longitude">longitude:</label>
@@ -55,16 +55,17 @@
         <label for="lattitude">lattitude:</label>
         <input type="text" id="lattitude" name="lattitude" formControlName="lattitude">
 
-        <button type="submit">Create Event</button>
+        <label for="date">Date:</label>
+        <input type="date" id="date" name="date" formControlName="date">
+        <br>
+        <label for="description">Description:</label>
+        <textarea type="text" id="description" name="description" formControlName="description"></textarea>
+        <div class="row">
+        <button type="submit" class="btn btn-primary ">Create Event</button>
+        </div>
+        </div>
       </form>
-    </div>
-  </section>
-</main>
 
-<footer class="footer">
-  <div class="container">
-    <p>&copy; 2024 Event Management System</p>
+    </div>
   </div>
-</footer>
-</body>
-</html>
+
