--- a/src/app/pages/bal-de-projet-pages/show-contest/show-contest.component.html
+++ b/src/app/pages/bal-de-projet-pages/show-contest/show-contest.component.html
@@ -88,7 +88,7 @@
     </div>
   </div>
 </section>
-  <section class="page-section bg-primary" id="about" *ngIf="!contest.allowVote">
+  <section class="page-section bg-primary" id="about" *ngIf="contest.allowVote==false">
     <div class="container px-4 px-lg-5">
       <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-lg-8 text-center">
