--- a/src/app/pages/bal-de-projet-pages/update-contest/update-contest.component.html
+++ b/src/app/pages/bal-de-projet-pages/update-contest/update-contest.component.html
@@ -2,7 +2,9 @@
   <div class="container container-fluid bg-dark text-white ">
 
     <form [formGroup]="contestForm" class="container w-50 ">
-
+      <div class="container row">
+          <h1 class="fw-bold align-items-center ms-5 center "> UPDATE CONTEST !</h1>
+      </div>
       <div class="form-group p-2">
         <label for="name">Contest Name:</label>
         <input type="text" class="form-control bg-dark text-white" id="name" formControlName="name">
