--- a/src/app/pages/bal-de-projet-pages/show-all-projects/show-all-projects.component.html
+++ b/src/app/pages/bal-de-projet-pages/show-all-projects/show-all-projects.component.html
@@ -9,8 +9,8 @@
     </div>
     <div class="row">
       <div class="col-sm-12 col-md-6 col-lg-4 mb-4" *ngFor="let project of projects; index as i ">
-        <div class="card text-dark card-has-bg click-col" style="background-image:url('https://source.unsplash.com/600x900/?tech,street');">
-        <img class="card-img d-none" src="https://source.unsplash.com/600x900/?tech,street" alt="Creative Manner Design Lorem Ipsum Sit Amet Consectetur dipisi?">
+        <div class="card text-dark card-has-bg click-col" >
+        <img class="card-img d-none" src="assets/{{project.imageUrl}}" alt="Creative Manner Design Lorem Ipsum Sit Amet Consectetur dipisi?">
         <div  class="card-img-overlay d-flex flex-column" [routerLink]="['/show-project-details',project.id]">
           <div class="card-body">
             <small class="card-meta mb-2">{{project.name}}</small>
