--- a/src/app/pages/bal-de-projet-pages/constetv2/competitions-page/competitions-page.component.html
+++ b/src/app/pages/bal-de-projet-pages/constetv2/competitions-page/competitions-page.component.html
@@ -7,8 +7,14 @@
         </p>
       </div>
     </div>
-  </div>
 
+    <div *ngIf="myUser.includes('ADMIN')" class="container m-2 center">
+      <div class="form-group p-2 col-2">
+        <button type="submit" class="btn btn-outline-success m-1 w-50" [routerLink]="['/add-contest']"> add Contest</button>
+        <button type="submit" class="btn btn-outline-primary m-1 w-50" [routerLink]="['/add-project-form']"> add project</button>
+      </div>
+    </div>
+  </div>
   <div class="competition-cards-container" *ngFor="let contest of headerContestList">
     <app-competitions-card [var1]="contest.name"></app-competitions-card>
   </div>
@@ -16,11 +22,6 @@
 <div class="competition-lists-container bg-dark">
   <div class="competition-lists-layout">
     <div class="competition-lists rounded-5">
-      <p class="text-white size-medium font-monospace">
-      here you can check other projects :
-        <a [routerLink]="['/show-all-projects']"> here</a>
-      </p>
-
       <div class="competition-container" *ngFor="let contest of contestList; index as i">
         <img class="competition-img rounded-2" src="assets/{{contest.image}}" [routerLink]="['/show-contest',contest.id]" alt="" srcset="" >
         <div class="competition-text">
@@ -35,11 +36,11 @@
       </div>
     </div>
     <div class="leaderboard" >
-      <h1>
+      <h1 >
         <svg class="ico-cup">
           <use xlink:href="#cup"></use>
         </svg>
-        Most active Players
+        <i class="fa fa-trophy m-3 color-icon"></i>Hall of Fame
       </h1>
       <ol >
         <li *ngFor="let project of projectListWinners; index as i" >
