--- a/src/app/pages/bal-de-projet-pages/show-all-projects/show-all-projects.component.html
+++ b/src/app/pages/bal-de-projet-pages/show-all-projects/show-all-projects.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="row">
       <div class="col-sm-12 col-md-6 col-lg-4 mb-4" *ngFor="let project of projects; index as i ">
-        <div class="card text-dark card-has-bg click-col" >
+        <div class="card text-dark card-has-bg click-col" style="background-image:url('https://source.unsplash.com/600x900/?tech,street');">
         <img class="card-img d-none" src="assets/{{project.imageUrl}}" alt="Creative Manner Design Lorem Ipsum Sit Amet Consectetur dipisi?">
         <div  class="card-img-overlay d-flex flex-column" [routerLink]="['/show-project-details',project.id]">
           <div class="card-body">
@@ -19,7 +19,7 @@
           </div>
           <div class="card-footer">
             <div class="media">
-              <img class="mr-3 rounded-circle" src="https://assets.codepen.io/460692/internal/avatars/users/default.png?format=auto&version=1688931977&width=80&height=80" alt="Generic placeholder image" style="max-width:50px">
+              <img class="mr-3 rounded-circle" src="https://media.licdn.com/dms/image/D5603AQFF0rJXoerSkA/profile-displayphoto-shrink_400_400/0/1704406009737?e=2147483647&v=beta&t=b3RRz3kjPZ5MrUmuUB89oJeJxZt9Q5GzWMHyVyQ1ujs" alt="Generic placeholder image" style="max-width:50px">
               <div class="media-body">
                 <h6 class="my-0 text-dark d-block">{{project.niveau}}</h6>
                 <small>{{project.optionSpeciality?.name}}</small>
