--- a/src/app/pages/bal-de-projet-pages/show-project-details/show-project-details.component.html
+++ b/src/app/pages/bal-de-projet-pages/show-project-details/show-project-details.component.html
@@ -68,7 +68,7 @@
         </table>
         <h2 class="text-white mt-0">Here's the application preview!</h2>
         <iframe width="420" height="315"
-                src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                src="https://youtu.be/9csX6goSaHk">
         </iframe>
         <hr class="divider divider-light" />
         <p class="text-white-75 mb-4">if you find the {{project.groupName}} work impressive vote it up in the contest <span class="link-info btn" [routerLink]="['/show-contest',project.contest?.id]">page</span></p>
