--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,7 +1,7 @@
 <div class="navbar-container">
   <div class="elements-container">
     <div class="left-side-container">
-      <div class="logo-style" routerLink="home">
+      <div class="logo-style p-2" routerLink="home">
         <div class="logo-text">
           ESPRIT
         </div>
@@ -27,8 +27,11 @@
       <div class="element-style" routerLink="">
         Videos
       </div>
-      <div class="element-style" routerLink="/contest">
+      <div class="element-style" routerLink="/contest-page">
         bal of projects
+      </div>
+      <div class="element-style" routerLink="/show-all-projects">
+         projects
       </div>
     </div>
     <div class="right-side-container">
