--- a/src/app/components/bal-de-project-components/add-contest/add-contest.component.html
+++ b/src/app/components/bal-de-project-components/add-contest/add-contest.component.html
@@ -19,7 +19,7 @@
       </div>
       <div class="form-group p-2">
         <label for="deadline">Deadline :</label>
-        <input type="date" class="form-control bg-dark text-white" id="deadline" formControlName="deadline">
+        <input type="datetime-local" class="form-control bg-dark text-white" id="deadline" formControlName="deadline">
       </div>
 
       <div class="form-group p-2">
