--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -62,6 +62,8 @@
   font-family: 'Montserrat';
   font-weight: 500;
   cursor: pointer;
+  margin-right: 30px;
+
 }
 .element-style:hover{
   color: white;
