--- a/src/app/pages/video-list/video-list.component.html
+++ b/src/app/pages/video-list/video-list.component.html
@@ -1,15 +1,15 @@
 <div class="select-container">
-  <select (change)="handleNiveauChange($event)" class="dark-select">
+  <select id="Niveau"  name="Niveau" (change)="handleNiveauChange($event)" class="dark-select">
     <option value="">Select Niveau</option>
     <option *ngFor="let level of niveau | enumToArray" [value]="level">{{ level }}</option>
   </select>
 
-  <select (change)="handleVisibilityChange($event)" class="dark-select">
+  <select id="Matiere" name="Matiere" (change)="handleVisibilityChange($event)" class="dark-select">
     <option value="">Select Visibility</option>
     <option *ngFor="let vis of visibility | enumToArray" [value]="vis">{{ vis }}</option>
   </select>
 
-  <select (change)="handleOptionChange($event)" class="dark-select">
+  <select id="Option" name="Option" (change)="handleOptionChange($event)" class="dark-select">
     <option value="">Select Option</option>
     <option *ngFor="let option of optionEnum | enumToArray" [value]="option">{{ option }}</option>
   </select>
