--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -9,31 +9,26 @@
           Competitive
         </div>
       </div>
-      <div class="element-style" routerLink="">
-        Feed
-      </div>
-      <div class="element-style" routerLink="competitions" style="color: #c88f00">
+
+      <div class="element-style p-3" routerLink="competitions" style="color: #c88f00">
         Competitions
       </div>
-      <div class="element-style" routerLink="">
-        Discuss
-      </div>
-      <div class="element-style" routerLink="products">
+      <div class="element-style p-3" routerLink="products">
         Marketplace
       </div>
-      <div class="element-style" routerLink="messages">
+      <div class="element-style p-3" routerLink="messages">
         Messages
       </div>
-      <div class="element-style" routerLink="events">
+      <div class="element-style p-3" routerLink="events">
         Events
       </div>
-      <div class="element-style" routerLink="">
+      <div class="element-style p-3" routerLink="">
         Videos
       </div>
-      <div class="element-style" routerLink="/contest-page">
+      <div class="element-style p-3" routerLink="/contest-page">
         bal of projects
       </div>
-      <div class="element-style" routerLink="/show-all-projects">
+      <div class="element-style p-3" routerLink="/show-all-projects">
          projects
       </div>
     </div>
