--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -22,7 +22,7 @@
       <div class="element-style p-3" routerLink="events">
         Events
       </div>
-      <div class="element-style p-3" routerLink="">
+      <div class="element-style p-3" routerLink="video">
         Videos
       </div>
       <div class="element-style p-3" routerLink="/contest-page">
