--- a/src/app/pages/bal-de-projet-pages/show-contest/show-contest.component.html
+++ b/src/app/pages/bal-de-projet-pages/show-contest/show-contest.component.html
@@ -54,7 +54,7 @@
       <div class="col mb-5" *ngFor="let projects of projectList;index as i"  >
         <div class="card h-100">
           <!-- Product image-->
-          <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..."  [routerLink]="['/show-project-details',projects.id]"/>
+          <img class="card-img-top" src="https://img.freepik.com/vecteurs-libre/vecteur-degrade-logo-colore-oiseau_343694-1365.jpg?w=740&t=st=1715717247~exp=1715717847~hmac=1f2cdde208d9dd4dc331c0f5e435efcc5ddeab3a518ad9902a2181b596fd0568" alt="..."  [routerLink]="['/show-project-details',projects.id]"/>
 
           <!-- Product details-->
           <div class="card-body p-4">
